--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,17 +7,18 @@
   --color1 : #330521;
   --color2 : #991F68;
   --color3 : #E00087;
-  --color4 : #E00087;
+  --color4 : #FF7FCC;
   --color5 : #FFE5F5;
 }
 
 body {
     min-height: 75rem;
-    padding-top: 5.5rem;
+    padding-top: 4.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 .bg-light{
     background-color: var(--white) !important;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
 }
 a.nav-link{
     font-weight: 500;
@@ -127,4 +128,120 @@ border-bottom-left-radius: 24px;
 -moz-border-radius: 24px;
 border-radius: 24px;
 overflow: hidden;
+border: 4px solid var(--color4);
+}
+.serviceContent hr{
+    width: 50%;
+    border-top:3px solid  var(--color4);
+    margin-left: 0;
+}
+.serviceContent h4{
+    font-weight: 600;
+    color: var(--color2);
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+.serviceContent ul{
+    list-style: none;
+    padding-left: 0;
+}
+.serviceContent ul li{
+    color: var(--color1);
+    font-size: 1rem;
+}
+
+.aboutUs{
+    height: 100vh;
+    z-index: 9; 
+    position: relative;
+    padding: 5rem 0;
+     background-image: linear-gradient(to bottom, #ffe5f5, #fcecfa, #fbf3fe, #fcf9ff, #ffffff);
+}
+.serviceContent p{
+    color: var(--color1);
+    font-size: 0.9rem;
+}
+.aboutUs .serviceImg{
+    height: 30rem;
+}
+.aboutUs .serviceImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.mobile{
+    display: none;
+}
+.web{
+    display: block;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .mobile{
+    display: block !important;
+}
+.web{
+    display: none !important;
+}
+  .services{
+      height: auto;
+  }
+  .serviceContent{
+      width: 50%;
+  }
+  .heading{
+      font-size: 2.5rem;
+  }
+  .serviceImg{
+      height: 300px;
+      margin-bottom: 4rem;
+  }
+  .serviceImg img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  .services::after{
+      top:auto;
+        bottom: 45px;
+    width: 100%;
+    height: 48%;
+  }
+  .aboutUs{
+      height: auto;
+  }
+  .aboutUs .serviceContent{
+      width: 100%;
+  }
+  .aboutUs .serviceContent .row{
+      padding: 20px;
+  }
+  .carousel-item{
+      height: 100vh;
+      object-position: center;
+      object-fit: contain;
+  }
+  .carousel-item img{
+      height: 100%;
+      width: auto !important;
+  }
+  .heroContent{
+      left: 20px;
+  }
+  .heroContent h1{
+      font-size: 3.5rem;
+  }
+  .heroContent p{
+      width: 80%;
+  }
+  .aboutUs .serviceImg{
+    height: 20rem;
+}
+.aboutUs .serviceImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 }
