--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
     min-height: 75rem;
     padding-top: 4.5rem;
     font-family: 'Montserrat', sans-serif;
+    background-color: white;
 }
 .bg-light{
     background-color: var(--white) !important;
@@ -48,9 +49,9 @@ a.nav-link{
     border-bottom: 4px solid var(--color3);
 }
 #heroSlide{
-    /* position: fixed;
+    position: fixed;
     top: 4rem;
-    left: 0; */
+    left: 0;
     width: 100%;
 }
 #heroSlide a{
@@ -151,11 +152,18 @@ border: 4px solid var(--color4);
 }
 
 .aboutUs{
-    height: 100vh;
+    height: auto;
     z-index: 9; 
     position: relative;
     padding: 5rem 0;
      background-image: linear-gradient(to bottom, #ffe5f5, #fcecfa, #fbf3fe, #fcf9ff, #ffffff);
+}
+.brands{
+     height: auto;
+    z-index: 9; 
+    position: relative;
+    padding: 5rem 0;
+    background-color: white;
 }
 .serviceContent p{
     color: var(--color1);
@@ -174,6 +182,42 @@ border: 4px solid var(--color4);
 }
 .web{
     display: block;
+}
+
+.brandIcon{
+    padding: 1rem;   
+}
+.brandIcon img{    
+    border: 3px solid var(--color4);
+    border-radius: 20px;
+}
+.flowr{
+    margin-top: 3rem;
+}
+.boxWhite{
+    background-color: #fff;
+    height: 100px;
+    width: 100%;
+    position: relative;
+    z-index: 8;
+}
+.photoGallery{
+    height: auto;
+    z-index: 9; 
+    position: relative;
+    padding: 5rem 0;
+     background-image: linear-gradient(to top, #ffe5f5, #fcecfa, #fbf3fe, #fcf9ff, #ffffff);
+}
+.item{
+    height: auto;
+}
+.galleryCarousel .item img{
+    border: 4px solid var(--color4);
+    border-radius: 24px;
+}
+.galleryCarousel .owl-nav{
+    text-align: center;
+    font-size: 3rem;
 }
 
 
@@ -218,7 +262,7 @@ border: 4px solid var(--color4);
   .aboutUs .serviceContent .row{
       padding: 20px;
   }
-  .carousel-item{
+  /* .carousel-item{
       height: 100vh;
       object-position: center;
       object-fit: contain;
@@ -226,7 +270,7 @@ border: 4px solid var(--color4);
   .carousel-item img{
       height: 100%;
       width: auto !important;
-  }
+  } */
   .heroContent{
       left: 20px;
   }
