--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,13 @@ border: 4px solid var(--color4);
     text-align: center;
     font-size: 3rem;
 }
+.num{
+    background:#000;
+    color:#fff;
+    padding:10px;
+    width:50px;
+    text-align:center;
+}
 
 
 @media only screen and (max-width: 600px) {
