--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,19 @@
   --color4 : #FF7FCC;
   --color5 : #FFE5F5;
 }
+html{
+    overflow-x: hidden;
+}
 
 body {
     min-height: 75rem;
     padding-top: 4.5rem;
     font-family: 'Montserrat', sans-serif;
     background-color: white;
+    overflow-x: hidden;
+}
+main{
+    position: relative; height: 100vh; overflow: hidden;
 }
 .bg-light{
     background-color: var(--white) !important;
@@ -208,6 +215,13 @@ border: 4px solid var(--color4);
     padding: 5rem 0;
      background-image: linear-gradient(to top, #ffe5f5, #fcecfa, #fbf3fe, #fcf9ff, #ffffff);
 }
+.testimonialGallery{
+    height: auto;
+    z-index: 9; 
+    position: relative;
+    padding: 5rem 0;
+     background: #fff;
+}
 .item{
     height: auto;
 }
@@ -219,6 +233,19 @@ border: 4px solid var(--color4);
     text-align: center;
     font-size: 3rem;
 }
+
+.testimonialCarousel .item img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    border: 1px solid var(--color4);
+    object-fit: cover;
+    object-position: center;
+}
+.testimonialCarousel .owl-nav{
+    text-align: center;
+    font-size: 3rem;
+}
 .num{
     background:#000;
     color:#fff;
@@ -226,7 +253,125 @@ border: 4px solid var(--color4);
     width:50px;
     text-align:center;
 }
+.testimonialCarousel .item{    
+    position: relative;
+}
+.testi{
+    height: 20rem;
+    background-color:var(--color5);
+    border: 1px solid var(--color4);
+    padding: 20px 30px;    
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.testi:after{
+    content: '';
+    background-image: url('../img/testArrow.png');
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    bottom: -50px;
+    left: 20px;
+}
+.testimonialContent{
+    font-size: 0.9rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.testimonialContent p{
+    color: #330521;
+    line-height: 25px;
+}
+.testAuther{
+    position: relative;
+    margin-top: 1rem;
+    margin-left: 5rem;
+    color: var(--color2);
+    font-weight: 600;
+}
+.testAuther span{
+    font-weight: 300;
+}
 
+.footerUp{
+    background-color: var(--color2);
+    padding: 80px 60px;
+    position: relative;
+    z-index: 9;
+}
+.footerUp h3{
+    font-family: 'Cookie', cursive;
+    font-size: 2rem;
+    color: #fff;
+    padding-bottom: 2rem;
+}
+.address{
+    font-size: 0.9rem;
+    color: #fff;
+    line-height: 30px;
+}
+.address a{
+    font-size: 0.9rem;
+    color: #fff;
+    line-height: 30px;
+    text-decoration: none;    
+    padding-bottom: 5px;
+    border-bottom: 2px solid var(--color3);
+}
+.workingHours h4{
+    font-size: 1rem;
+    font-weight: 600;
+    color: #fff;
+    padding-bottom: 2rem;
+}
+.workingHours p{
+    color: #fff;
+    width: 70%;
+    font-weight: 300;
+}
+.workingHours a{
+    font-size: 0.9rem;
+    color: #fff;
+    line-height: 30px;
+    text-decoration: none;    
+    padding-bottom: 5px;
+    border-bottom: 2px solid var(--color3);
+}
+.socialMedia{
+    list-style: none;
+    padding-left: 0;
+}
+.socialMedia li{
+    display: inline-block;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+.socialMedia li a{
+    border-bottom: none;
+}
+.socialMedia li a img{
+    width: 42px;
+    height: auto;
+    opacity: 1;
+}
+.socialMedia li a:hover img{
+    opacity: 0.8;
+}
+.copyright{
+    background-color: var(--color1);
+    text-align: center;
+    position: relative;
+    z-index: 9;
+}
+.copyright p{
+    font-size: .9rem;
+    margin-bottom: 0;    
+    padding: 20px;
+    color: var(--color4);
+}
 
 @media only screen and (max-width: 600px) {
     .mobile{
@@ -286,6 +431,7 @@ border: 4px solid var(--color4);
   }
   .heroContent p{
       width: 80%;
+      line-height: 30px;
   }
   .aboutUs .serviceImg{
     height: 20rem;
@@ -294,5 +440,46 @@ border: 4px solid var(--color4);
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.testi{
+    height: auto;
+    margin: 10px;
+}
+main{
+    position: relative; height: 100vh; overflow: hidden;
+}
+#heroSlide{
+    height: 100vh;
+}
+#heroSlide .carousel-inner{
+    height: 100%;
+}
+#heroSlide .carousel-item{
+    height: 100%;
+}
+#heroSlide .carousel-item img{
+    height: 100%;
+    object-fit: cover;
+}
+.boxWhite{
+    height: 0;
+}
+.btn-chamayam{
+    margin: 2rem 0 !important;
+}
+.brands .serviceContent .row{
+    margin: 0 !important;
+}
+.brands .serviceContent {
+    width: 100% !important;
+}
+.address {
+    margin-bottom: 50px;
+}
+.socialMedia{
+    margin-top: 30px;
+}
+.copyright p{
+    font-size: .6rem;
 }
 }
