--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,11 +247,11 @@ border: 4px solid var(--color4);
     font-size: 3rem;
 }
 .num{
-    background:#000;
-    color:#fff;
-    padding:10px;
-    width:50px;
+    color:#991F68;
+    padding:5px 10px;
     text-align:center;
+    font-size: 0.9rem;
+    font-weight: 600;
 }
 .testimonialCarousel .item{    
     position: relative;
@@ -373,113 +373,189 @@ border: 4px solid var(--color4);
     color: var(--color4);
 }
 
+.owl-carousel .owl-prev {
+      left: -35px;
+    }
+
+    .owl-carousel .owl-next {
+      right: -35px;
+    }
+
+    .owl-theme .owl-nav [class*=owl-] {
+      color: #991F68;
+      font-size: 1.2rem;
+    }
+
+    .owl-carousel .prev-carousel:hover {
+      background-position: 0px -53px;
+    }
+
+    .owl-carousel .next-carousel:hover {
+      background-position: -24px -53px;
+    }
+    .owl-nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-left: 30%;
+        width: 150px;
+        border-radius: 24px;
+        background-color: #fff;
+        border: 1px solid #E00087;
+        margin-top: 10px;
+        position: absolute;
+        left: 25%;
+        right: 0;
+        margin: auto;
+    }
+    .owl-prev{
+        display: flex;        
+        align-items: center;
+        width: 5rem;
+    }
+    .owl-carousel .owl-stage{
+        margin-bottom: 10px;
+    }
+    
+    .photoGallery .btn-chamayam{
+        margin-top: 0;
+        position: relative;
+        margin-top: -2rem;
+        font-size:1rem;
+        left: 30%;
+    }
+    .testimonialCarousel .owl-nav{
+        margin-top: -3rem;
+    }
+
 @media only screen and (max-width: 600px) {
     .mobile{
     display: block !important;
+    }
+    .web{
+        display: none !important;
+    }
+    .services{
+        height: auto;
+    }
+    .serviceContent{
+        width: 50%;
+    }
+    .heading{
+        font-size: 2.5rem;
+    }
+    .serviceImg{
+        height: 300px;
+        margin-bottom: 4rem;
+    }
+    .serviceImg img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    .services::after{
+        top:auto;
+            bottom: 45px;
+        width: 100%;
+        height: 48%;
+    }
+    .aboutUs{
+        height: auto;
+    }
+    .aboutUs .serviceContent{
+        width: 100%;
+    }
+    .aboutUs .serviceContent .row{
+        padding: 20px;
+    }
+    /* .carousel-item{
+        height: 100vh;
+        object-position: center;
+        object-fit: contain;
+    }
+    .carousel-item img{
+        height: 100%;
+        width: auto !important;
+    } */
+    .heroContent{
+        left: 20px;
+    }
+    .heroContent h1{
+        font-size: 3.5rem;
+    }
+    .heroContent p{
+        width: 80%;
+        line-height: 30px;
+    }
+    .aboutUs .serviceImg{
+        height: 20rem;
+    }
+    .aboutUs .serviceImg img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .testi{
+        height: auto;
+        margin: 10px;
+    }
+    main{
+        position: relative; height: 100vh; overflow: hidden;
+    }
+    #heroSlide{
+        height: 100vh;
+    }
+    #heroSlide .carousel-inner{
+        height: 100%;
+    }
+    #heroSlide .carousel-item{
+        height: 100%;
+    }
+    #heroSlide .carousel-item img{
+        height: 100%;
+        object-fit: cover;
+    }
+    .boxWhite{
+        height: 0;
+    }
+    .btn-chamayam{
+        margin: 2rem 0 !important;
+    }
+    .brands .serviceContent .row{
+        margin: 0 !important;
+    }
+    .brands .serviceContent {
+        width: 100% !important;
+    }
+    .address {
+        margin-bottom: 50px;
+    }
+    .socialMedia{
+        margin-top: 30px;
+    }
+    .copyright p{
+        font-size: .6rem;
+    }
+    .testimonialCarousel .owl-nav{
+        margin-top: 0rem;
+    }
+    .photoGallery .btn-chamayam{
+        left: 5%;
+        margin: 0 !important;
+        top: -20px !important;
+    }
+    .navbar-light .navbar-toggler{
+        border-color: transparent;
+    }
+    .nav-link.active{
+        border-bottom: transparent;
+    }
+    .btnNav{
+        background-color: transparent;
+        border: none;
+        padding-left: 0 !important;
+    }
+
 }
-.web{
-    display: none !important;
-}
-  .services{
-      height: auto;
-  }
-  .serviceContent{
-      width: 50%;
-  }
-  .heading{
-      font-size: 2.5rem;
-  }
-  .serviceImg{
-      height: 300px;
-      margin-bottom: 4rem;
-  }
-  .serviceImg img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  .services::after{
-      top:auto;
-        bottom: 45px;
-    width: 100%;
-    height: 48%;
-  }
-  .aboutUs{
-      height: auto;
-  }
-  .aboutUs .serviceContent{
-      width: 100%;
-  }
-  .aboutUs .serviceContent .row{
-      padding: 20px;
-  }
-  /* .carousel-item{
-      height: 100vh;
-      object-position: center;
-      object-fit: contain;
-  }
-  .carousel-item img{
-      height: 100%;
-      width: auto !important;
-  } */
-  .heroContent{
-      left: 20px;
-  }
-  .heroContent h1{
-      font-size: 3.5rem;
-  }
-  .heroContent p{
-      width: 80%;
-      line-height: 30px;
-  }
-  .aboutUs .serviceImg{
-    height: 20rem;
-}
-.aboutUs .serviceImg img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.testi{
-    height: auto;
-    margin: 10px;
-}
-main{
-    position: relative; height: 100vh; overflow: hidden;
-}
-#heroSlide{
-    height: 100vh;
-}
-#heroSlide .carousel-inner{
-    height: 100%;
-}
-#heroSlide .carousel-item{
-    height: 100%;
-}
-#heroSlide .carousel-item img{
-    height: 100%;
-    object-fit: cover;
-}
-.boxWhite{
-    height: 0;
-}
-.btn-chamayam{
-    margin: 2rem 0 !important;
-}
-.brands .serviceContent .row{
-    margin: 0 !important;
-}
-.brands .serviceContent {
-    width: 100% !important;
-}
-.address {
-    margin-bottom: 50px;
-}
-.socialMedia{
-    margin-top: 30px;
-}
-.copyright p{
-    font-size: .6rem;
-}
-}
+
